dfir_rs/tests/compile-fail-stable/surface_demuxenum_wrongtype.rs
../compile-fail/surface_demuxenum_wrongtype.rs